--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -22,10 +22,14 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongo": "^0.1.0",
+    "mongodb": "^5.1.0",
+    "mongoose": "^7.0.3",
+    "mongosh": "^1.8.0",
     "typescript": "^5.0.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17"
+    "@types/express": "^4.17.17",
+    "nodemon": "^2.0.22"
   }
 }
